@@ -39,6 +39,7 @@
 <ul>
 	<li><p><b>By file/folder:</b>  <i>Documents->Add File...</i><br>
 	If you have some document files you'd like Referencer to know about, you can add one or more files, or a whole folder (<i>Documents->Add Folder..</i>), and Referencer will create entries for each file.  PDF files will be read, and Referencer will do its best to fill out the metadata for you.</p>
+	<p><i>Note: when adding a folder of files, files named ".svn", "CVS", files with the extension ".bib" or ".reflib" and files with names starting "." are automatically skipped.  These files can still be added individually.</i></p>
 	</li>
 	<li><p><b>By DOI code:</b>  <i>Documents->Add Document with DOI...</i><br>
 	If you have the DOI code for a paper, you can save yourself the effort of inputting its metadata by simply giving Referencer the DOI and letting it look up the metadata for you.</p>
